--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+SEOTitle: 烟花易冷 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: sailor.xu.23@gmail.com
 description: "Every failure is leading towards success."
